[project]
dependencies = [
    "caveclient>=5.30.1",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "tqdm-joblib>=0.0.4",
]
description = "Python package for interfacing with CAVE edit histories"
name = "paleo"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
jupyter = [
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "mkdocs-material>=9.5.39",
]

[tool.uv.sources]
caveclient = { path = "../caveclient", editable = true }
